# fastapi_zerp

./: README.md  database.db  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 0b15fc06d1be_exercicio_02_aula_04.py  6932a7c0e5eb_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_settings.py
